# emc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.ipynb  data_torch.ipynb  io  mc  mc.cpp  mc.py  nt.cpp  quiver.py  requirements.txt  test.cpp  test.py  testT.py  test_animation.py  test_generate.py  test_io.cpp  test_neq_ani.py  test_noneq.ipynb  test_omega.py  test_trace.py  tmp.md
c_out/: data_Ts_pure.csv  data_pure_cpp copy.ipynb  data_pure_cpp.ipynb  data_pure_cpp_equ.ipynb  data_pure_cpp_zflow.ipynb  div.ipynb
particle_records/: particle_dist_ani.py  particle_records.ipynb
pysrc/: mc.py  test.ipynb  testT.py  test_animation.py  test_generate.py  test_neq_ani.py  test_noneq.ipynb  test_omega.py  test_trace.py  tmp.md
